# Virtual-Data-Factory-VDF-

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  research.txt
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: login.jsx
frontend/src/components/chat/: ChatArea.jsx  ChatInput.jsx
frontend/src/components/connectors/: ConnectorForm.jsx
frontend/src/components/rightpanel/: RightPanel.jsx
frontend/src/components/sidebar/: Sidebar.jsx
frontend/src/context/: AppContext.jsx
frontend/src/hooks/: useStream.js
frontend/src/services/: api.js
src/: api.py
src/synthgen/: __init__.py  _anomalies.py  _generator.py  _schema.py  _spec_cache.py  _stream.py  cli.py  client.py  errors.py  types.py
src/synthgen/backends/: __init__.py  anthropic.py  base.py  gemini.py  mock.py
src/synthgen/prompts/: examples.json  schema.json  system.md  tools.json
src/synthgen/sinks/: __init__.py  _base.py  _databricks.py  _hivemq.py  _public_api.py  _router.py  _snowflake.py
tests/: conftest.py
tests/eval/: cases.jsonl  test_eval.py
tests/unit/: test_anomalies.py  test_anthropic_backend.py  test_backends.py  test_client.py  test_correlations.py  test_generator.py  test_schema.py  test_spec_cache.py  test_stream.py  test_types.py
